[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Key_Binding_Container.gd" type="Script" id=2]
[ext_resource path="res://Icons/Key_slot_bkg.png" type="Texture" id=3]

[node name="Key_Binding_slot_template" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 90, 90 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key_Binding_VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Key_Binding_VBox"]
margin_left = 635.0
margin_right = 644.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "A"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Key_Binding_VBox"]
margin_top = 182.0
margin_right = 1280.0
margin_bottom = 538.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
expand = true
stretch_mode = 1

[node name="slot_name" type="Label" parent="Key_Binding_VBox"]
margin_top = 542.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Template"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_Key_Binding_slot_template_button_down"]
[connection signal="button_up" from="." to="." method="_on_Key_Binding_slot_template_button_up"]
